syntax="proto3";

package common;

message Ack{
int32 ErrCode = 1;
int32 ProId = 2;
}