syntax="proto3";

package common;

message LogCommon{
string Uid = 1;
string DeviceId = 2;
enum LogType{
START_APP = 0;
UPDATE_START = 1;
UPDATE_END = 2;
LOGIN =3;
LOGIN_SUC = 4;
LOGIN_FAIL = 5;
}
LogType Type = 3;
string Msg = 4;
int64 Time = 5;
string App = 6;
string ChanId = 7;
}